added more keycodes

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <div id="maincharacter">
 
           <!-- Replace Old Images With New Ones - Running Gif -->
-          <img id="running" src="running.gif" height="80px" style="display:none;">
-          <img id="slide" src="sliding.gif" height="80px" style="display:none;"></div></div></div>
+          <img id="running" src="running.gif" height="80px"></div></div></div>
 
   </body>
 </html>
