fixed javascript errors

--- a/Flash Games.html
+++ b/Flash Games.html
@@ -28,7 +28,7 @@
             <meta name="msapplication-square310x310logo" content="/favicon/mstile-310x310.png" />
     </head>
 <body>
-<!-- Use Boxmen -->
+<!-- Use Boxmen && The Lava Escape -->
 
 <div style="padding-top: 15px; text-align: center;">
         <p style="text-align: center;">
