--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         </button>
       
         <!-- My Game -->
-          <button id="My_Game_Button" class="switcher_button" style="padding: 15px 70px;">
+          <button id="My_Game_Button" class="switcher_button" style="padding: 15px 75px;">
             My Game
           </button>
       </div>
-      <iframe src="Flash Games.html" id="Flash_Games"></iframe>
+      <iframe src="Flash Games.html" id="Flash_Games" scrolling="no"></iframe>
 
-      <iframe src="My Game.html" id="mainframe" scrolling="no"></iframe>
+      <iframe src="My Game.html" id="My_Game" scrolling="no" style="display: none;"></iframe>
 
   </body>
 </html>
