attempted to fix flash games

--- a/Flash Games.html
+++ b/Flash Games.html
@@ -28,32 +28,22 @@
             <meta name="msapplication-square310x310logo" content="/favicon/mstile-310x310.png" />
     </head>
 <body>
-<!-- Use Boxmen && The Lava Escape -->
+<html>
+<head>
+</head>
+<body bgcolor="#00000">  
+<center> <br><br><br><br>
+<!-- Use Boxmen -->
+<object width="725" height="500"> 
+<param name="use boxmen" value="http://www.miniclipgamez.com/games/files/use-boxmen.swf">  
+<embed src="http://www.miniclipgamez.com/games/files/use-boxmen.swf" width="100%" height="100%">
+<br><br>
+<!-- Lava Game -->
+<object width="725" height="500"> 
+<param name="use boxmen" value="http://www.miniclipgamez.com/games/files/lava-escape.swf">  
+<embed src="http://www.miniclipgamez.com/games/files/lava-escape.swf" width="100%" height="100%">
 
-<div style="padding-top: 15px; text-align: center;">
-        <p style="text-align: center;">
-
-             </p><center>
-<script type="text/javascript">
-document.write('<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" WIDTH="540" HEIGHT="372" id="FlashContent">');
-document.write('<PARAM NAME="movie" VALUE="https://www.miniclipgamez.com/games/files/lava-escape.swf">');
-document.write('<PARAM NAME="quality" VALUE="high">');
-document.write('<PARAM NAME="AllowScriptAccess" VALUE="never">');
-document.write('<embed width="540" height="372" src="https://www.miniclipgamez.com/games/files/lava-escape.swf" quality="high" NAME="FlashContent" AllowScriptAccess="never" TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"></embed>');
-document.write('</OBJECT>');
-</script><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="540" height="372" id="FlashContent"><param name="movie" value="http://www.miniclipgamez.com/games/files/use-boxmen.swf"><param name="quality" value="high"><param name="AllowScriptAccess" value="never"><embed width="540" height="372" src="http://www.miniclipgamez.com/games/files/use-boxmen.swf" quality="high" name="FlashContent" allowscriptaccess="never" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>
-<noscript>
-&lt;OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" WIDTH="540" HEIGHT="372" id="FlashContent"&gt;
-&lt;PARAM NAME="movie" VALUE="https://www.miniclipgamez.com/games/files/lava-escape.swf"&gt;
-&lt;PARAM NAME="quality" VALUE="high"&gt;
-&lt;PARAM NAME="AllowScriptAccess" VALUE="never"&gt;
-&lt;embed width="540" height="372" src="https://www.miniclipgamez.com/games/files/use-boxmen.swf" quality="high" NAME="FlashContent" AllowScriptAccess="never" TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"&gt;&lt;/embed&gt;
-&lt;/OBJECT&gt;
-</noscript>
-</center></div> <p style="padding: 100px;"></p>
-
-<!-- Some Other Game -->
-<br>
-
-</body>
-</html>
+</object> 
+ </center>
+        </body>
+          </html>
